Adapt file paths to paperspace in notebooks

--- a/exercises/02_inference.ipynb
+++ b/exercises/02_inference.ipynb
@@ -6,15 +6,6 @@
    "source": [
     "# Inference\n",
     "As for training, we use `gunpowder` for predicting a larger area.\n",
-    " \n",
-    "(explain chunk processing)\n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Exercise 1\n",
     "Your task is to run the script twice, one time with datasetsize set to small, and one to big. With this we get two affinity prediction that we can play with in `03_agglomeration.ipynb`"
    ]
@@ -24,7 +15,8 @@
    "metadata": {},
    "source": [
     "## Exercise 2\n",
-    "1) While you are waiting for the prediction to finish, you can calculate how many chu"
+    "1. While you are waiting for the prediction to finish, you can calculate how many chunks needed to be predicted, if we were to process an entire fly brain\n",
+    "2. After the prediction, you can make an estimate for how long it would take, if we only had a single gpu available"
    ]
   },
   {
@@ -158,12 +150,9 @@
     "    )\n",
     "    start_time = time.time()\n",
     "    print(\"Starting prediction...\")\n",
-    "#     with build(pipeline):\n",
-    "#         pipeline.request_batch(BatchRequest())\n",
-    "    print(\"Prediction finished in {:0.2f}\".format(time.time() - start_time))\n",
-    "\n",
-    "\n",
-    "\n"
+    "    with build(pipeline):\n",
+    "        pipeline.request_batch(BatchRequest())\n",
+    "    print(\"Prediction finished in {:0.2f}\".format(time.time() - start_time))"
    ]
   },
   {
@@ -176,8 +165,8 @@
     "logging.getLogger('gunpowder.nodes.hdf5like_write_base').setLevel(\n",
     "    logging.DEBUG)\n",
     "\n",
-    "in_file = '../data/sample_0.n5'  # This is our raw file\n",
-    "setup_dir = '../data/setup58_p/' # This is the pretrained model. Change\n",
+    "in_file = '../jan/segmentation/data/sample_0.n5'  # This is our raw file\n",
+    "setup_dir = '../../jan/segmentation/snapshots/setup58_p/' # This is the pretrained model. Change\n",
     "# this to the train directory.\n",
     "\n",
     "out_dataset = 'volumes/affs'\n",
@@ -192,7 +181,7 @@
     "    out_file,\n",
     "    setup_dir,\n",
     "    out_dataset,\n",
-    "    datasetsize=datasetsize)\n"
+    "    datasetsize=datasetsize)"
    ]
   }
  ],
