Clean up inference and agglomeration notebook
Also seperates exercises from explanations

--- a/exercises/02_inference.ipynb
+++ b/exercises/02_inference.ipynb
@@ -6,23 +6,18 @@
    "source": [
     "# Inference\n",
     "As for training, we use `gunpowder` for predicting a larger area.\n",
-    "## Exercise 1\n",
-    "Your task is to run the script twice, one time with datasetsize set to small, and one to big. With this we get two affinity prediction that we can play with in `03_agglomeration.ipynb`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise 2\n",
-    "1. While you are waiting for the prediction to finish, you can calculate how many chunks needed to be predicted, if we were to process an entire fly brain\n",
-    "2. After the prediction, you can make an estimate for how long it would take, if we only had a single gpu available"
+    "## Exercise 1 : Start Inference\n",
+    "1. Your task is to run the script twice, one time with `datasetsize` set to small, and one to big. With this we get two affinity predictions that we can play with in `03_agglomeration.ipynb`\n",
+    "2. The default model that we use to make our prediction is a pretrained network. Change the `setup_dir`, such that it points to your training directory. By doing that, the network's weights are loaded from your model instead from our pretrained model. You also need to adapt `iteration` depending on what the last tensorflow checkpoint was, that are written out. For this go to your training directory, and search for this file: ``\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -46,21 +41,21 @@
     "\n",
     "    # voxels\n",
     "    voxel_size = Coordinate((40, 4, 4))\n",
-    "    input_shape = Coordinate(config['input_shape'])\n",
+    "    input_shape = Coordinate(config['input_shape']) # Network specific\n",
     "    output_shape = Coordinate(config['output_shape'])\n",
     "    context = (input_shape - output_shape) // 2\n",
+    "    \n",
+    "    # Initial ROI\n",
+    "    # got nice offset visually from neuroglancer : 1507, 1678, 100\n",
     "    if datasetsize == 'big':\n",
     "        offset = (50, 1400, 1400) * np.array(voxel_size)  # avoid big glia and cell body in sample 0\n",
     "        chunkgrid = [2, 12, 12]\n",
     "\n",
     "    elif datasetsize == 'small':\n",
-    "        offset = (90, 1600, 1400) * np.array(voxel_size)  # avoid big glia\n",
+    "        offset = (90, 1600, 1400) * np.array(voxel_size)  \n",
     "        chunkgrid = [1, 5, 5]\n",
     "\n",
     "\n",
-    "\n",
-    "    # Initial ROI\n",
-    "    # got nice offset visually from neuroglancer : 1507, 1678, 100\n",
     "    roi = Roi(\n",
     "        offset=offset,\n",
     "        shape=output_shape * voxel_size * Coordinate(chunkgrid),\n",
@@ -72,8 +67,6 @@
     "    read_roi = roi.copy()\n",
     "    read_roi = read_roi.grow(context_nm, context_nm)\n",
     "\n",
-    "\n",
-    "    # read_roi = read_roi.snap_to_grid(input_shape * voxel_size)\n",
     "    input_size = input_shape * voxel_size\n",
     "    output_size = output_shape * voxel_size\n",
     "\n",
@@ -92,10 +85,9 @@
     "        output_roi.get_shape()\n",
     "    )\n",
     "\n",
-    "    # TODO: Introduces daisy dependency, does that work without ?\n",
-    "    # Also, daisy.ROI and gunpowder.Roi have different behaviour, important\n",
-    "    # source of confusion. Prepare_ds only works with daisy.Roi, while\n",
-    "    # gunpowder node eg. Crop only works with gunpowder.Roi\n",
+    "\n",
+    "    # Caution: daisy.ROI and gunpowder.Roi have different behaviour, Prepare_ds only works with daisy.Roi, while\n",
+    "    # gunpowder node eg. Crop Node only works with gunpowder.Roi\n",
     "    ds = daisy.prepare_ds(\n",
     "        out_file,\n",
     "        out_dataset,\n",
@@ -144,7 +136,7 @@
     "                    raw: 'volumes/raw',\n",
     "                },\n",
     "                output_filename=out_file\n",
-    "            ) +  # TODO: Would be nice to have a consistent file format (eg. only n5)\n",
+    "            )\n",
     "            PrintProfilingStats(every=10) +\n",
     "            Scan(chunk_request)\n",
     "    )\n",
@@ -158,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "logging.basicConfig(level=logging.INFO)\n",
@@ -183,6 +177,37 @@
     "    out_dataset,\n",
     "    datasetsize=datasetsize)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2 : Throughput calculations\n",
+    "1. While you are waiting for the prediction to finish, you can calculate how many chunks needed to be predicted, if we were to process an entire fly brain\n",
+    "  - the dimension of the FAFB, a full adult fly brain dataset are: []\n",
+    "  - a chunk size is: [, , ] voxels, which translates to [] microns\n",
+    "2. After the prediction, you can make an estimate for how long it would take, if we only had a single gpu available"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3 : Check predicted affinities in neuroglancer\n",
+    "1. Check out whether your prediction was successfull by exploring the result in `neuroglancer`\n",
+    "2. If you are satisfied, you can move on to `03_agglomeration.ipynb`. If you have the feeling, your predictions are not correct (eg. only black), or you cant see any neuron border, consider to use the pretrained network instead of your own model. You need ok-affinity predictions for the next notebook.\n",
+    "3. You might want to come back to this notebook, if you are interested in comparing eg. your model and our pretrained model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Help & Troubleshooting\n",
+    "- If your notebook is hanging, sometimes it helps to restart the kernel: For this go to `Kernel` and then `Restart & Clear Output`\n",
+    "- If you get an error message: `compatible`, remove the container/file, that you are trying to write to. For instance, remove `affinities_big_50000.zarr` from the current directory if you have set this as `out_file`.\n",
+    "- We observed, that after prediction is done, the notebook might die, so the output disappears, and it might seem to you, that nothing worked out, but this is not true. It usually dies, after the prediction has finished."
+   ]
   }
  ],
  "metadata": {
@@ -201,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
