--- a/exercises/03_agglomeration.ipynb
+++ b/exercises/03_agglomeration.ipynb
@@ -1,9 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# From Affinities to Segmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1: Load the inference results\n",
+    "1. make sure you predicted affinities with `02_inference.ipynb`\n",
+    "2. You have two different datasetsizes written out, examples are nicer with datasetsize=big, but if the functions are too slow for you, consider to switch to datasetsize=small\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Help & Troubleshooting\n",
+    "- If your notebook is hanging, sometimes it helps to restart the kernel: For this go to `Kernel` and then `Restart & Clear Output`\n",
+    "- We experience some issues when running multiple `neuroglancer` instances at the same time. Make sure you close the tab of one `neuroglancer` instance before you run the next `neuroglancer` cell. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import daisy\n",
@@ -23,23 +50,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load the inference results\n",
-    "1. make sure you predicted affinities with `02_inference.ipynb`\n",
-    "2. You have two different datasetsizes written out, examples are nicer with datasetsize=big, but if the functions are too slow for you, consider to switch to datasetsize=small\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load the data (make sure you ran inference.ipynb before).\n",
     "# By default, you wrote out the big ROI at iteration 500000. However, if you changed iteration \n",
-    "# or datasetsize, change this here\n",
+    "# or datasetsize, model or out_file name\n",
     "datasetsize = 'big' # change accordingly\n",
     "iteration = 500000 # Change to check out other training iterations\n",
     "aff_file = 'affinities_{}_{:05}.zarr'.format(datasetsize, iteration)\n",
@@ -118,7 +138,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def connected_component_sectionwise(affs, threshold):\n",
@@ -186,8 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As for the snapshots, to get a good impression, it is better to explore the data in 3D with neuroglancer. Also, two neighboring neurons might by accident have the same color, though their ID is different. Neuroglancer allows you to \n",
-    "explore this in more detail:"
+    "As for the snapshots, to get a good impression, it is better to explore the data in 3D with neuroglancer."
    ]
   },
   {
@@ -218,14 +239,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1\n",
-    "Try out connected components for different thresholds and explore the effect in neuroglancer."
+    "## Exercise 1 : Connected Component in 2D\n",
+    "1. Try out connected components for different thresholds and explore the effect in neuroglancer.\n",
+    "2. For this, use the function `connected_component_sectionwise` of this notebook"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Here you should type your solution\n",
@@ -446,18 +470,21 @@
    "metadata": {},
    "source": [
     "### Exercise 2: How does the segmentation change when we change the agglomeration threshold ?\n",
-    "1) Try to find a threshold, that produces meaningful results (this means, ideally, no two neurons should be merged together, and not a single neuron should be split into two segments\n",
-    "2) We also add our ground truth data here, such that you see, what we are aiming for "
+    "1. Try to find a threshold, that produces meaningful results (this means, ideally, no two neurons should be merged together, and not a single neuron should be split into two segments\n",
+    "\n",
+    "2. We also add our ground truth data here, such that you see, what we are aiming for "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Here you should type your solution\n",
-    "# 1) apply agglomeration functions for different thresholds\n",
+    "# 1) apply agglomeration functions for different thresholds (utils.agglomerate_fragments)\n",
     "# 2) see the result in neuroglancer"
    ]
   },
@@ -501,7 +528,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gt, __ = funlib.segment.arrays.relabel(gt, inplace=True)"
@@ -583,7 +612,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 4: How does VOI_split and VOI_merge change with changing agglomeration thresholds ?\n",
+    "### Exercise 3: How does VOI_split and VOI_merge change with changing agglomeration thresholds ?\n",
     "In this exercise you should\n",
     "\n",
     "  1. create multiple segmentations for different thresholds\n",
@@ -597,7 +626,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Here you should type your solution\n",
@@ -635,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
