Fix path names in 02_inference

--- a/exercises/02_inference.ipynb
+++ b/exercises/02_inference.ipynb
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -136,7 +134,7 @@
     "                    raw: 'volumes/raw',\n",
     "                },\n",
     "                output_filename=out_file\n",
-    "            )\n",
+    "            ) +  # TODO: Would be nice to have a consistent file format (eg. only n5)\n",
     "            PrintProfilingStats(every=10) +\n",
     "            Scan(chunk_request)\n",
     "    )\n",
@@ -144,27 +142,227 @@
     "    print(\"Starting prediction...\")\n",
     "    with build(pipeline):\n",
     "        pipeline.request_batch(BatchRequest())\n",
-    "    print(\"Prediction finished in {:0.2f}\".format(time.time() - start_time))"
+    "    print(\"Prediction finished in {:0.2f}\".format(time.time() - start_time))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:daisy.datasets:write_roi is deprecated, please use write_size instead\n",
+      "INFO:daisy.datasets:Reusing existing dataset\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read ROI in nm is [2880:6240, 5976:7944, 5176:7144] (3360, 1968, 1968)\n",
+      "Output ROI in nm is [3600:5520, 6400:7520, 5600:6720] (1920, 1120, 1120)\n",
+      "Read ROI in voxel space is [72:156, 1494:1986, 1294:1786] (84, 492, 492)\n",
+      "Output ROI in voxel space is [90:138, 1600:1880, 1400:1680] (48, 280, 280)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:gunpowder.tensorflow.local_server:Creating local tensorflow server\n",
+      "INFO:gunpowder.tensorflow.local_server:Server running at b'grpc://localhost:44327'\n",
+      "INFO:gunpowder.tensorflow.nodes.predict:Initializing tf session, connecting to b'grpc://localhost:44327'...\n",
+      "INFO:gunpowder.tensorflow.nodes.predict:Reading graph from ../../jan/segmentation/snapshots/setup58_p/train_net.meta and weights from ../../jan/segmentation/snapshots/setup58_p/train_net_checkpoint_500000...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ../../jan/segmentation/snapshots/setup58_p/train_net_checkpoint_500000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ../../jan/segmentation/snapshots/setup58_p/train_net_checkpoint_500000\n",
+      "WARNING:gunpowder.nodes.hdf5like_source_base:WARNING: You didn't set 'interpolatable' for RAW (dataset volumes/raw). Based on the dtype uint8, it has been set to True. This might not be what you want.\n",
+      "INFO:gunpowder.nodes.scan:scanning over 25 chunks\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting prediction...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:Initializing container ./affinities_small_500000.zarr\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:Initializing dataset for AFFS\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:AFFS (volumes/affs in ./affinities_small_500000.zarr) has offset (3600, 6400, 5600)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:Initializing dataset for RAW\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:Shape in voxels: (84, 492, 492)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:Shape with channel dimensions: (84, 492, 492)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:create_dataset: volumes/raw, (84, 492, 492), None, float32, offset=(2880, 5976, 5176), resolution=(40, 4, 4)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:RAW (volumes/raw in ./affinities_small_500000.zarr) has offset (2880, 5976, 5176)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 0:56, 0:56] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 0:268, 0:268] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 1/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 56:112, 0:56] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 56:324, 0:268] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 2/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 112:168, 0:56] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 112:380, 0:268] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 3/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 168:224, 0:56] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 168:436, 0:268] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 4/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 224:280, 0:56] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 224:492, 0:268] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 5/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 0:56, 56:112] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 0:268, 56:324] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 6/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 56:112, 56:112] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 56:324, 56:324] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 7/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 112:168, 56:112] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 112:380, 56:324] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 8/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 168:224, 56:112] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 168:436, 56:324] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 9/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 224:280, 56:112] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 224:492, 56:324] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.print_profiling_stats:\n",
+      "Profiling Stats\n",
+      "===============\n",
+      "\n",
+      "NODE                METHOD    COUNTS    MIN       MAX       MEAN      MEDIAN    \n",
+      "Crop                prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Crop                process   10        0.00      0.00      0.00      0.00      \n",
+      "IntensityScaleShift prepare   20        0.00      0.00      0.00      0.00      \n",
+      "IntensityScaleShift process   20        0.01      0.02      0.01      0.01      \n",
+      "N5Source                      10        0.31      0.97      0.63      0.56      \n",
+      "Normalize           prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Normalize           process   10        0.01      0.03      0.01      0.01      \n",
+      "Pad                 prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Pad                 process   10        0.00      0.00      0.00      0.00      \n",
+      "Predict             prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Predict             process   10        0.29      6.15      0.89      0.30      \n",
+      "ZarrWrite           prepare   10        0.00      0.00      0.00      0.00      \n",
+      "ZarrWrite           process   10        0.18      0.58      0.44      0.51      \n",
+      "\n",
+      "TOTAL\n",
+      "upstream                      10        1.11      7.27      2.01      1.35      \n",
+      "downstream                    9         0.00      0.01      0.00      0.00      \n",
+      "\n",
+      "\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 10/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 0:56, 112:168] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 0:268, 112:380] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 11/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 56:112, 112:168] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 56:324, 112:380] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 12/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 112:168, 112:168] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 112:380, 112:380] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 13/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 168:224, 112:168] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 168:436, 112:380] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 14/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 224:280, 112:168] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 224:492, 112:380] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 15/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 0:56, 168:224] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 0:268, 168:436] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 16/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 56:112, 168:224] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 56:324, 168:436] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 17/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 112:168, 168:224] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 112:380, 168:436] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 18/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 168:224, 168:224] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 168:436, 168:436] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 19/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 224:280, 168:224] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 224:492, 168:436] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.print_profiling_stats:\n",
+      "Profiling Stats\n",
+      "===============\n",
+      "\n",
+      "NODE                METHOD    COUNTS    MIN       MAX       MEAN      MEDIAN    \n",
+      "Crop                prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Crop                process   10        0.00      0.00      0.00      0.00      \n",
+      "IntensityScaleShift prepare   20        0.00      0.00      0.00      0.00      \n",
+      "IntensityScaleShift process   20        0.01      0.01      0.01      0.01      \n",
+      "N5Source                      10        0.30      0.58      0.46      0.56      \n",
+      "Normalize           prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Normalize           process   10        0.01      0.01      0.01      0.01      \n",
+      "Pad                 prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Pad                 process   10        0.00      0.00      0.00      0.00      \n",
+      "Predict             prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Predict             process   10        0.29      0.30      0.30      0.30      \n",
+      "ZarrWrite           prepare   10        0.00      0.00      0.00      0.00      \n",
+      "ZarrWrite           process   10        0.31      0.45      0.36      0.34      \n",
+      "\n",
+      "TOTAL\n",
+      "upstream                      10        0.96      1.29      1.15      1.21      \n",
+      "downstream                    10        0.00      0.01      0.00      0.00      \n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:gunpowder.nodes.scan:processed chunk 20/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 0:56, 224:280] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 0:268, 224:492] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 21/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 56:112, 224:280] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 56:324, 224:492] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 22/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 112:168, 224:280] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 112:380, 224:492] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 23/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 168:224, 224:280] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 168:436, 224:492] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 24/25\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing AFFS to voxel coordinates [0:48, 224:280, 224:280] (48, 56, 56)\n",
+      "DEBUG:gunpowder.nodes.hdf5like_write_base:writing RAW to voxel coordinates [0:84, 224:492, 224:492] (84, 268, 268)\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 25/25\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction finished in 37.49\n"
+     ]
+    }
+   ],
    "source": [
     "logging.basicConfig(level=logging.INFO)\n",
     "logging.getLogger('gunpowder.nodes.hdf5like_write_base').setLevel(\n",
     "    logging.DEBUG)\n",
     "\n",
-    "in_file = '../jan/segmentation/data/sample_0.n5'  # This is our raw file\n",
-    "setup_dir = '../../jan/segmentation/snapshots/setup58_p/' # This is the pretrained model. Change\n",
-    "# this to the train directory.\n",
+    "in_file = '../../jan/segmentation/data/sample_0.n5'  # This is our raw file\n",
+    "setup_dir = '../../jan/segmentation/snapshots/setup58_p/' # This is the pretrained model. \n",
+    "\n",
     "\n",
     "out_dataset = 'volumes/affs'\n",
-    "datasetsize = 'big' # choose big or small\n",
+    "datasetsize = 'small' # choose big or small\n",
     "iteration = 500000\n",
     "\n",
     "out_file = 'affinities_{}_{:05}.zarr'.format(datasetsize, iteration)\n",
@@ -226,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
